@startuml Sales Management System ER Diagram

skinparam linetype ortho
skinparam class {
    BackgroundColor White
    ArrowColor #2563eb
    BorderColor #1e40af
}

entity "users" as users {
    *id: INTEGER <<PK>>
    --
    *username: VARCHAR
    *password_hash: VARCHAR
    *role: ENUM('admin', 'salesperson')
    created_at: TIMESTAMP
}

entity "customers" as customers {
    *id: INTEGER <<PK>>
    --
    *name: VARCHAR
    email: VARCHAR
    phone: VARCHAR
    address: TEXT
    created_at: TIMESTAMP
}

entity "products" as products {
    *id: INTEGER <<PK>>
    --
    *name: VARCHAR
    description: TEXT
    *price: DECIMAL
    *stock: INTEGER
    *low_stock_threshold: INTEGER
    created_at: TIMESTAMP
}

entity "sales" as sales {
    *id: INTEGER <<PK>>
    --
    *customer_id: INTEGER <<FK>>
    *user_id: INTEGER <<FK>>
    *total_amount: DECIMAL
    *sale_date: TIMESTAMP
    created_at: TIMESTAMP
}

entity "sale_items" as sale_items {
    *id: INTEGER <<PK>>
    --
    *sale_id: INTEGER <<FK>>
    *product_id: INTEGER <<FK>>
    *quantity: INTEGER
    *price: DECIMAL
    created_at: TIMESTAMP
}

sales }|--|| customers : belongs to
sales }|--|| users : created by
sale_items }|--|| sales : belongs to
sale_items }|--|| products : contains

@enduml